# RefLink

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
client/: pubspec.yaml
client/lib/: app.dart  colors.dart  main.dart  theme.dart
client/lib/base/: app_bar.dart  base_scaffold.dart
client/lib/helpers/: grpc_call_wrapper.dart  reconnecting_bidirectional_stream.dart  reconnecting_stream.dart
client/lib/models/: auto_climb_model.dart  endgame_climb_model.dart  panel_types.dart
client/lib/providers/: fms_provider.dart  fms_provider.g.dart  grpc_channel_provider.dart  grpc_channel_provider.g.dart  head_referee_panel_provider.dart  head_referee_panel_provider.g.dart  health_provider.dart  network_config_provider.dart  network_config_provider.g.dart  panel_id_provider.dart  panel_id_provider.g.dart  referee_panel_provider.dart  referee_panel_provider.g.dart  rotation_provider.dart  rotation_provider.g.dart  theme_provider.dart  theme_provider.g.dart
client/lib/router/: app_routes.dart  router.dart  router.g.dart
client/lib/utils/: logger.dart
client/lib/views/head_referee/: head_referee_view.dart  post_match_phase.dart
client/lib/views/referee/: auto_phase.dart  post_match_phase.dart  (+2 more)
client/lib/widgets/: branding.dart  field_action_button.dart
database/: Cargo.toml
database/src/: db.rs  lib.rs  table.rs
protos/: api.proto  common.proto  db.proto  fms.proto
server/: Cargo.toml  build.rs
server/src/: config.rs  db.rs  lib.rs
server/src/core/: api.rs  events.rs  mod.rs  scheduler.rs  server.rs
server/src/modules/: mod.rs
server/src/modules/arena/: mod.rs  repository.rs  teams.rs
server/src/modules/fms/: api.rs  mod.rs  repository.rs
server/src/modules/fms/cheesy/: client.rs  messages.rs  mod.rs  sync.rs
server/src/modules/head_referee/: api.rs
server/src/modules/referee_panel/: api.rs  mod.rs  presence.rs
(+40 files in other folders)
