[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.103"
async-stream = "0.3.6"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive", "env"] }
dashmap = "6.2.1"
futures-util = "0.3.32"
http = "1.4.2"
log = "0.4.33"
log4rs = "1.4.0"
once_cell = "1.21.4"
prost = "0.14.4"
reqwest = { version = "0.13.4", features = ["form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-tungstenite = "0.30.0"
tonic = "0.14.6"
tonic-prost = "0.14.6"
tonic-web = "0.14.6"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dependencies.database]
path = "../database"

[build-dependencies]
tonic-prost-build = "0.14.6"
